# calc

./: calc_simple.html  calc_simple_results.html  calculation.py  controllers.py  index.html  layout.html  pyproject.toml  urls.py
