[project]
name = "calc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "mypy>=1.19.1",
    "numpy>=2.2.6",
    "python-multipart>=0.0.22",
    "ruff>=0.15.7",
    "uvicorn>=0.42.0",
]
